@@ -9,9 +9,13 @@
 	<class type="net.sf.oval.test.validator.XMLConfigurationTest$User" overwrite="false"
 		applyFieldConstraintsToSetters="true">
 
+		<object>
+			<assert lang="groovy" message="firstName and lastName must not be the same"><expr>_this.firstName != _this.lastName</expr></assert>
+		</object>
+
 		<field name="firstName">
 			<assert lang="groovy" message="{context} cannot be longer than 3 characters">
-				<expr><![CDATA[_value != null && _value.length() < 3]]></expr>
+				<expr><![CDATA[_value != null && _value.length() <= 3]]></expr>
 			</assert>
 		</field>
 
